# learning

./: .editorconfig  .gitignore  .gitmodules  3D-plot.ipynb  CMakeLists.txt  README.md  Sorting.ipynb  Untitled.ipynb  classification.ipynb  containers.cpp  cpp-tutorial.ipynb  efficiency.ipynb  env.yml  heap_sort.py  iterators.cpp  linear-algebra.ipynb  machine-learning.ipynb  matplotlib.ipynb  merge_sort.py  mnist.ipynb  multiple_variables.ipynb  neural-networks.ipynb  numpy.ipynb  one-vs-all.ipynb  sigmoid.ipynb  test.cpp  theory.ipynb  theory2.ipynb  types.cpp  univariate_polynomial_2.ipynb
asm/: README.md  exit-linux-64-yasm-gcc.s  exit-linux-64-yasm-ld.s  exit-mac-64-as-gcc.s  test.s  test_gas_64_osx.s  test_nasm_32.s
asm/linux-vs-others/: test_gas_32.s
asm/mac-64-gcc/: exit.s
asm/x86_64/: .gitignore  .vimrc  README.md  boot.asm  build-image.sh  hello.asm  print.asm  run-qemu.sh  run-vbox.sh  run.sh
benchmark/algorithms/: CMakeLists.txt  asymptotic-complexity.cpp  heapsort-benchmark.cpp
c/: .gitignore  CMakeLists.txt  calc  calc.c  helloworld  linked_list.c  math.c  memory.c  pointers  pointers.c
c/audio/: random_samples.c  run.sh  sine_alsa.c
c/beej-c/: hello.c
c/build-process/: README.md  header.h  test.c  test2.c
c/cprogramming/: hello  hello.c
c/event/: poll_pipes.c
c/graphics/: Makefile  hello-world-gtk.c
c/modern-c/: B9-detach.c  B9.c  Makefile  basic_blocks2.c  cat.c  (+24 more)
classes/: classes.cpp
cpp/: .gitignore  CMakeLists.txt  cpp-tutorial.ipynb  types.cpp
cpp/build-process/: README.md  test  test-light.cpp  test.cpp
cpp/google-for-education/: source.cpp
cpp/howtovulkan/: main.cpp  run.sh
cpp/imgui/: Makefile  gui.hpp  main.cpp  state.hpp  window.hpp
cpp/imgui/lib/: get_shader_program.h  obj_loader.hpp
cpp/imgui/shaders/: shader.fs  shader.vs
cpp/opengl/imgui/: main.cpp  state.hpp
cpp/opengl/imgui/assets/: crate.mtl  cube.mtl  moon.mtl
cpp/opengl/imgui/imgui/backends/: imgui_impl_glfw.cpp
cpp/opengl/imgui/lib/: obj_loader.hpp
cpp/opengl/imgui/shaders/: shader.fs
cpp/pointers/: pointers.cpp
cpp/vkguide/: README.md  main.cpp  run.sh
cpp/vulkan/chatgpt_1_3/: main.cpp  run.sh
cpp/vulkan/chatgpt_1_3/shaders/: frag.glsl  vert.glsl
cpp/vulkan/vkguide/: vk_engine.cpp  vk_engine.h
cpp/vulkan/vkguide/lib/: vk_initializers.h  vk_types.h
data-structures-and-algorithms/: LinkedList.cpp  LinkedList.hpp  Queue.hpp  main.cpp
data-structures-and-algorithms.xcodeproj/: project.pbxproj
data-structures-and-algorithms/cpp-implementations/benchmark/algorithms/: CMakeLists.txt
docker/: README.md
front-end/: .gitignore
google-for-education/: source.cpp
io/: CMakeLists.txt  io.cpp  main.cpp  test.txt
javascript/: break.js  class.js  comparison.js  custom-promise.js  function.js  inheritance-es5.js  inheritance-es6.js  object.js  prototype.js  scope.js  this.js
machine-learning/: multiple_variables.ipynb  sigmoid.ipynb
node.js/: server.js
operators/: operators.cpp
pointers/: main.cpp
practice-problems/: five-problems-in-one-hour.ipynb  google-interview.cpp  is-palindrome.cpp
python/: env.yml  test.py
scipy/: linalg.ipynb
src/algorithms/: CMakeLists.txt  HeapSort.cpp  HeapSort.h  SortAlgorithm.cpp  SortAlgorithm.h  benchmark.cpp  sort.cpp
tensorflow/: intro.ipynb  mnist-beginner.ipynb
test/: CMakeLists.txt  HeapSortTest.cpp
typescript/: README.md  const_assertions.ts  function.ts  greeter.ts  index.ts  package.json  partial.ts  readonlyStuff.ts  tsconfig.json  tuple.ts  typeInference.ts
web/: .gitignore
zig/: values.zig
(+727 files in other folders)
