cmake_minimum_required (VERSION 3.5)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
project (learning-cpp)
add_executable(io io/io.cpp)
add_executable(pointers pointers/pointers.cpp)
add_executable(classes classes/classes.cpp)
add_executable(operators operators/operators.cpp)
add_executable(types types.cpp)
add_executable(containers containers.cpp)
add_executable(iterators iterators.cpp)
add_executable(google-for-education google-for-education/source.cpp)